@@ -235,6 +235,11 @@ IExpression.AsString with tests
 CompositeExpression with tests
 MethodModel with parse and initial tests
 
+2011-09-18
+SetExpression with parse support and tests
+Local variables in method parse with tests
+ReturnExpression with parse support and tests
+
 Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com/
